# viper

./: CMakeLists.txt  Dockerfile  README.md  compose.yaml  package.xml
.github/workflows/: ros2.yml  sync-labels.yml
config/: joystick_params.yaml
docker/devel/: Dockerfile  docker-build.sh  docker-run.sh
docker/host-dev/: Dockerfile
docs/: build.md
gazebo/: README.md
gazebo/config/: bridge.yaml
gazebo/env-hooks/: viper.dsv.in
gazebo/models/viper/: model.config  model.sdf
gazebo/worlds/: world.sdf
include/viper/: AttitudeController.h  CascadedController.h  ComplementaryFilter.h  Estimator.h  EstimatorBase.h  ExternalEstimator.h  MathUtilities.h  MotorMixer.h  Node.h  PID.h  RateController.h  lpf.h  quaternion.h  util.h  vector.h
launch/: viper-cosim.py  viper-quad.py  viper-sim.py
scripts/: README.md  build.sh  setup_can.sh  setup_slcan.sh  setup_yakut_slcan.sh  setup_yakut_vcan.sh
src/: CanManager.cpp  Node.cpp
